# see-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.hpp  audit.txt  doc.txt  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  log.txt  output.s  parser.cpp  parser.hpp  token.cpp  token.hpp
automation/: test_compiler_driver.py  test_compiler_errors.py  test_compiler_generation.py  test_compiler_outputs.py  test_driver.py  test_errors.py  test_lexer_hello.py  test_parser_hello.py
doc/: design_driver.md  design_lexer.md
include/: ast.h  codegen.h  ir.h  lexer.h  parser.h  semantic.h  token.h
include/backend/: backend_driver.hpp  codegen.hpp  cpu_code.hpp  weight_folding_pass.hpp
include/backend/targets/: cpu_avx512_target.hpp  cpu_generic_c_target.hpp  cpu_neon_target.hpp
include/frontend/: onnx_ingressor.hpp  shape_inference.hpp  validator.hpp
include/middle-end/: conv_lowering_pass.hpp  dead_code_elimin.hpp  middle_end_driver.hpp  op_fusion_pass.hpp  pass_manager.hpp  sir.hpp
include/middle_end/: sir.hpp
include/seecpp/frontend/: protobuf_reader.h
include/utility/: logger.hpp  weight_buffer.hpp
proto/: sir.proto
source/: README.md
source/backend/: README.md  backend_driver.cpp  codegen.cpp  cpu_code.cpp  weight_folding_pass.cpp
source/backend/driver/: codegen_driver.cc  codegen_driver.h
source/backend/kernels/: avx512_kernels.cc  kernels.h  neon_kernels.cc
source/backend/lowering/: selector.cc  selector.h
source/backend/memory/: offset_binder.cc  offset_binder.h
source/backend/serializer/: schema.h  serializer.cc  serializer.h
source/backend/weights/: weight_packer.cc  weight_packer.h
source/driver/: frontend_driver.cpp
source/frontend/: README.md  diagnostics_engine.h  frontend_driver.cpp  onnx_ingressor.cpp  protobuf_reader.cc  shape_inference.cpp  type_bridge.cc  type_bridge.h  validator.cpp
source/frontend/diagnostics/: diagnostics_engine.cc
source/frontend/driver/: frontend_driver.cc  frontend_driver.h
source/frontend/parser/: graph_builder.cc  graph_builder.h  shape_inference.cc  shape_inference.h
source/frontend/transforms/: canonicalizer.cc  canonicalizer.h  constant_folder.cc  constant_folder.h
source/frontend/validator/: validator.cc  validator.h
source/middle-end/: README.md  conv_lowering_pass.cpp  dead_code_elimin.cpp  middle_end_driver.cpp  op_fusion_pass.cpp  pass_manager.cpp  sir.cpp
source/middle_end/: README.md  sir.cpp
source/middle_end/analysis/: differentiability_checker.cc  differentiability_checker.h
source/middle_end/autodiff/: gradient_builder.cc  gradient_builder.h
source/middle_end/manager/: pass_manager.cc  pass_manager.h
source/middle_end/memory/: arena_mapper.cc  arena_mapper.h
source/middle_end/transforms/: algebraic_simplifier.cc  algebraic_simplifier.h  conv_lower_pass.h  conv_lowering.cc  dead_code_elimination.cc  dead_code_elimination.h  kernel_fuser.cc  kernel_fuser.h
source/runtime/: python_bindings.cc  runtime_engine.cc  runtime_engine.h
source/sir/: sir.cc  sir.h
source/utility/: logger.cc  logger.h  result.h
source/utility/buffer/: weight_buffer.h
sourceCode/frontEnd/: ast.cpp  lexer.cpp  token.cpp
sourceCode/frontEnd/functionalDirectory/: ir.cpp
sourceCode/frontEnd/include/: token.hpp
sourceCode/frontEnd/includeDirectory/: ast.hpp  lexer.cpp  token.hpp
sourceCode/frontEnd/sourceDirectory/: parser.cpp
sourceCode/frontEnd/utilityDirectory/: token.cpp
sourceCode/includeDirectory/: ir.hpp
sourceCode/middleEnd/testDirectory/: mario.c
src/: codegen.c  driver.c  ir.c  lexer.c  lexer_test.c  main.c  parser.c  parser_test.c  semantic.c  test_lexer.c  test_parser.c  token.c
test/: README.md  test_codegen.c  test_frontend.py  test_generation.c  test_ir.c  test_lexer.c  test_parser.c  test_semantic.c
test/backend/: test_codegen.py  text_backend.py
test/cpp/: test_compiler.cc
test/cpp/backend/: test_codegen.cc
test/cpp/frontend/: test_driver.cc
test/cpp/middle_end/: test_manager.cc
test/frontend/: test_config.py  test_frontend.py  test_shape.py  test_weights.py  text_config.py  text_ingressor.py
test/middle-end/: test_middle_end.py  test_passes.py
test/python/: main.py  test_e2e_gradients.py
tests/: test_all.py  test_driver.py  test_lexer.py  test_lexer_hello.py  test_parser_hello.py
tools/: .clang-format
util/: ast.c  token.c
utils/: ast.c  token.c
